[package]
name = "ts-fuck-around"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["lib"]

[dependencies]
# centralized keygen
tofn = { git = "https://github.com/axelarnetwork/tofn.git" }
ecdsa = { version = "0.12", features = ["digest"], default-features = false } # needed only for FromDigest trait
tracing = {version = "0.1", default-features = false}
tracing-subscriber = { version = "0", features = ["env-filter", "fmt"], default-features = false }
k256 = { version = "0.9", features = ["ecdsa", "zeroize"], default-features = false }

anyhow = "1.0.53"
futures = "0.3"
round-based = { version = "0.1.4", features = ["dev"] }
structopt = "0.3"
tokio = { version = "1.16", features = ["macros","fs","rt-multi-thread","io-util"] }
surf = "2"

rand = "0.8.5"


serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
rand_chacha = "0.3"
hmac = "0.11"
zeroize = { version = "1.4", features = ["zeroize_derive"] }
